app/doppler-env-application/overlays/prduction/doppler-env-application-https-redirect-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: doppler-env-application-redirect-https
  namespace: doppler-env-application
spec:
  redirectScheme:
    scheme: https
    permanent: true
