app/doppler-env-application/overlays/prduction/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: doppler-env-application-ingress
  namespace: doppler-env-application
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-default-redirect-to-https@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  ingressClassName: traefik
  rules:
    - host: "doppler-env-application.example.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: doppler-env-application-svc
                port:
                  name: http
  tls:
    - hosts:
        - "doppler-env-application.example.com"
      secretName: doppler-env-application-example-com-tls
